# TTB_reader

./: .dockerignore  .gitignore  Dockerfile  Estimation_Milestones.md  README.md  pyproject.toml
alc_label_verifier/: __init__.py  _constants.py  adapter.py  exceptions.py  matching.py  models.py  ocr.py  preprocessing.py  service.py
app/: batch_store.py  demo_cases.py  main.py  queue_state.py  simulation_pool.py  web_helpers.py
app/static/: workbench.css
app/templates/: _batch_row.html  _batch_rows.html  _batch_summary.html  _field_results.html  _result_panel.html  _status_badge.html  batch.html  batch_workspace.html  index.html  queue.html  queue_item.html  test.html
docs/: approach.md  m1-gaps.md  presearch.md  real-label-gaps-latest.md  real-label-gaps.csv  real-label-gaps.md  tradeoffs.md  ttb_endpoints.md
docs/plans/: 2026-04-16-m2-single-label-reviewer.md  2026-04-16-m3-batch-review-beta.md  2026-04-16-m4-submission-and-reviewer-readiness.md  2026-04-17-real-label-category-a.md  2026-04-17-real-label-category-b.md  2026-04-17-real-label-category-c.md  2026-04-19-reviewer-queue-landing.md  2026-04-19-simulate-cola-submission.md
evals/: __init__.py  adapter.py  reference_target.py  run_golden_set.py
evals/golden_set/: README.md  __init__.py  build_golden_set.py  cases.jsonl  evaluators.py  (+1 more)
prds/: PRD_01_Verification_Engine_Foundation.md  PRD_02_Single_Label_Reviewer_Workbench.md  PRD_03_Batch_Review_Beta.md  PRD_04_Submission_and_Reviewer_Readiness.md  README.md
scripts/: bootstrap_models.py  label_real_cases.py  smoke_test.sh  smoke_verify.py  ttb_eval_builder.py
tests/: test_batch_web.py  test_contract.py  test_field_parsing.py  test_integration.py  test_label_real_cases.py  test_m2_enrichment.py  test_normalization.py  test_queue_state.py  test_queue_web.py  test_real_labels_adapter.py  test_simulation_pool.py  test_warning.py  test_web.py
(+9 files in other folders)
